# xenoderm

./: .gitignore  README.md  pyproject.toml  run_pyghidra_headless_noargs.py
.github/actions/setup-ghidra/: action.yml  ghidra_download.py  main.py
.github/actions/setup-python-uv/: action.yml
.github/workflows/: test-actions.yml
docs/architecture/: analysis-pipeline.md  batch-loading.md  decompiler-engine.md  ghidra-exporter.md  github-actions.md  overview.md  pcode-ir.md  transformation-layers.md  ui-design.md
lv/cebbys/tools/xenoderm/ghidra/: __init__.py
resources/: test.pcode.json
scripts/setup/: install-ghidra.py
